stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_Put':
CircularBuffer.c:54:38: error: expected ')' before '{' token
   54 |  if(self->input_index>=self->capacity
      |    ~                                 ^
      |                                      )
   55 |     {
      |     ~                                 
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
